--- a/public/stylus/profile.styl
+++ b/public/stylus/profile.styl
@@ -13,6 +13,8 @@
 @import 'objects/header.styl'
 @import 'objects/category-menu.styl'
 @import 'objects/works.styl'
+@import 'objects/artists.styl'
+@import 'objects/products.styl'
 @import 'objects/footer.styl'
 // @import 'objects/filters.styl'
 // @import 'objects/products.styl'
