--- a/app/views/user/product/index.html
+++ b/app/views/user/product/index.html
@@ -45,7 +45,7 @@
 
 					</div>
 					<div class="actions__buy">
-						<button class="button-solid" data-size='large' data-color='red' data-expand='true'>Comprar</button>
+						<a href="/checkout/{{product.nameSlugify}}" class="button-solid" data-size='large' data-color='red' data-expand='true'>Comprar</a>
 					</div>
 
 					<div class="actions__people">
@@ -70,7 +70,8 @@
 						<div class="people-item"><img src="/img/artists/artist2.jpg"></div>
 						<div class="people-item"><img src="/img/artists/artist3.jpg"></div>
 						<div class="people-item"><img src="/img/artists/artist4.jpg"></div>
- -->					</div>
+ -->					
+ 							</div>
 
 				</div>
 
