add routers for checkout

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -195,6 +195,7 @@
 	<script src="/js/lib/slider.js"></script>
 
 	<script src="/js/index.js"></script>
+	<script src="/js/script.js"></script>
 
 	<script>
 		var workFeatureds = {{ workFeatureds|json|safe }}
