--- a/app/views/auth/signup.html
+++ b/app/views/auth/signup.html
@@ -5,97 +5,105 @@
 
 {% block content %}
 
-	{% include '../partials/category-menu.html' %}
+    {% include '../partials/category-menu.html' %}
 
 
-	<!-- ********************************************************************
-		$ LOGIN
-	********************************************************************* -->
-	<section class="login-cover">
-		<div class="login-box js-loginBox">
-			<header class="login-box__header">
-				<div class="skinny-menu">
-					<a href="#" class="skinny-menu__item js-signInFormButton">Ingresar</a>
-					<a href="#" class="skinny-menu__item js-signUpFormButton">Registrarme</a>
-				</div>
-			</header>
-			<form class="login-box__form js-signUpForm">
-		 		<a href="#" class="facebook-button" data-expand='true'>
-					<i class="fa fa-facebook-official"></i>&nbsp; Registrarme con Facebook
-				</a>
-				<div class="separator-text">
-					<span class="line"></span>
-					<span class="text">Con email</span>
-					<span class="line"></span>
-				</div>
-				<input class="input" data-size='large' name="username" placeholder="Username" type="text">
-				<input class="input" data-size='large' name="email" placeholder="Email" type="email">
-				<input class="input" data-size='large' name="password" placeholder="Password" type="password">
-				<input class="input" data-size='large' name="first-name" placeholder="First Name" type="text">
-				<input class="input" data-size='large' name="last-name" placeholder="Last Name" type="text">
-				<select class="input" name="gender">
-					<option selected disabled>Género</option>
-					<option value="Male">Masculino</option>
-					<option value="Female">Femenino</option>
-				</select>
-				<div class="question">
-					<input name="question" type="checkbox" id="question">
-					<label for="question" class="medium-text">¿Eres Artista profesional?</label>
-				</div>
-				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Registrarme" type="submit">
-				<p class="high-text note" data-size="small">Al registrarte estas aceptando los <strong>terminos y condiciones</strong> de Arte Manifiesto</p>
-			</form>
-			<form class="login-box__form js-signInForm">
-		 		<a href="#" class="facebook-button" data-expand='true'>
-					<i class="fa fa-facebook-official"></i>&nbsp; Ingresar con Facebook
-				</a>
-				<div class="separator-text">
-					<span class="line"></span>
-					<span class="text">Con email</span>
-					<span class="line"></span>
-				</div>
-				<input class="input" data-size='large' name="email" placeholder="Email" type="text">
-				<input class="input" data-size='large' name="password" placeholder="Password" type="password">
-				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Ingresar" type="submit">
-				<p class="high-text note js-rememberFormButton" data-size="small">Recordar contraseña</p>
-			</form>
-			<form class="login-box__form js-rememberForm">
-				<div class="separator-text">
-					<span class="line"></span>
-					<span class="text">Recordar contraseña</span>
-					<span class="line"></span>
-				</div>
-				<input class="input" data-size='large' name="email" placeholder="Email" type="text">
-				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Recordar" type="submit">
-				<p class="high-text note js-rememberBackButton" data-size="small">Ingresar</p>
-			</form>
-		</div>
-	</section>
+    <!-- ********************************************************************
+        $ LOGIN
+    ********************************************************************* -->
+    <section class="login-cover">
+        <div class="login-box js-loginBox">
+            <header class="login-box__header">
+                <div class="skinny-menu">
+                    <a  class="skinny-menu__item js-signInFormButton">Ingresar</a>
+                    <a  class="skinny-menu__item js-signUpFormButton">Registrarme</a>
+                </div>
+            </header>
+            <form class="login-box__form js-signUpForm">
+                {#<a href="#" class="facebook-button" data-expand='true'>
+                    <i class="fa fa-facebook-official"></i>&nbsp; Registrarme con Facebook
+                </a>
+#}
+                <div class="separator-text">
+                    <span class="line"></span>
+                    <span class="text">Con email</span>
+                    <span class="line"></span>
+                </div>
+                <input class="input" data-size='large' name="username" placeholder="Username" type="text">
+                <input class="input" data-size='large' name="email" placeholder="Email" type="email">
+                <input class="input" data-size='large' name="password" placeholder="Password" type="password">
+                <input class="input" data-size='large' name="firstname" placeholder="First Name" type="text">
+                <input class="input" data-size='large' name="lastname" placeholder="Last Name" type="text">
+                <select class="input" name="gender">
+                    <option selected disabled>Género</option>
+                    <option value="Male">Masculino</option>
+                    <option value="Female">Femenino</option>
+                </select>
 
-	{% include '../partials/footer.html' %}
-	
-	<script src="/js/vendor/jquery.min.js"></script>
-	
-	<script src="/js/lib/login.js"></script>
+                <div class="question">
+                    <input name="question" type="checkbox" id="question">
+                    <label for="question" class="medium-text">¿Eres Artista profesional?</label>
+                </div>
+                <input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Registrarme"
+                       type="submit">
+{#
+                <p class="high-text note" data-size="small">Al registrarte estas aceptando los <strong>terminos y
+                        condiciones</strong> de Arte Manifiesto</p>#}
+            </form>
+            <form class="login-box__form js-signInForm">
+                {#<a href="#" class="facebook-button" data-expand='true'>
+                    <i class="fa fa-facebook-official"></i>&nbsp; Ingresar con Facebook
+                </a>
+#}
+                <div class="separator-text">
+                    <span class="line"></span>
+                    <span class="text">Con email</span>
+                    <span class="line"></span>
+                </div>
+                <input class="input" data-size='large' name="email" placeholder="Email" type="text">
+                <input class="input" data-size='large' name="password" placeholder="Password" type="password">
+                <input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Ingresar"
+                       type="submit">
 
-	<script>
+                <p class="high-text note js-rememberFormButton" data-size="small">Recordar contraseña</p>
+            </form>
+            <form class="login-box__form js-rememberForm">
+                <div class="separator-text">
+                    <span class="line"></span>
+                    <span class="text">Recordar contraseña</span>
+                    <span class="line"></span>
+                </div>
+                <input class="input" data-size='large' name="email" placeholder="Email" type="text">
+                <input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Recordar"
+                       type="submit">
 
-		window.login = new Login({
-			mode: 'signup',
-			modalClass: 'js-modal',
-			loginBoxClass: 'js-loginBox',
-			signUpButtonClass: 'js-signUpButton',
-			signInButtonClass: 'js-signInButton',
-			signUpFormButtonClass: 'js-signUpFormButton',
-			signInFormButtonClass: 'js-signInFormButton',
-			rememberFormButtonClass: 'js-rememberFormButton',
-			rememberBackButtonClass: 'js-rememberBackButton',
-			signUpFormClass: 'js-signUpForm',
-			signInFormClass: 'js-signInForm',
-			rememberFormClass: 'js-rememberForm',
-			loginClosedClass: 'js-loginClosed'
-		})
+                <p class="high-text note js-rememberBackButton" data-size="small">Ingresar</p>
+            </form>
+        </div>
+    </section>
 
-	</script>
+    {% include '../partials/footer.html' %}
+
+    <script src="/js/vendor/jquery.min.js"></script>
+
+    <script src="/js/lib/login.js"></script>
+
+    <script>
+        window.login = new Login({
+            mode: 'signup',
+            modalClass: 'js-modal',
+            loginBoxClass: 'js-loginBox',
+            signUpButtonClass: 'js-signUpButton',
+            signInButtonClass: 'js-signInButton',
+            signUpFormButtonClass: 'js-signUpFormButton',
+            signInFormButtonClass: 'js-signInFormButton',
+            rememberFormButtonClass: 'js-rememberFormButton',
+            rememberBackButtonClass: 'js-rememberBackButton',
+            signUpFormClass: 'js-signUpForm',
+            signInFormClass: 'js-signInForm',
+            rememberFormClass: 'js-rememberForm',
+            loginClosedClass: 'js-loginClosed'
+        })
+    </script>
 
 {% endblock %}
