--- a/public/stylus/elements/menus.styl
+++ b/public/stylus/elements/menus.styl
@@ -55,11 +55,13 @@
 		padding-top .75rem
 		padding-bottom .75rem
 		display table-cell
+		cursor pointer
 		&:not(:first-child)
 			padding-left 1rem
 		&:not(:last-child)
 			padding-right 1rem
-		// padding .5rem 1rem
+		&.selected
+			background #f6f6f6
 			
 .carousel-thick-menu
 	height 2.5rem
