--- a/app/views/pages/products.html
+++ b/app/views/pages/products.html
@@ -196,9 +196,9 @@
 					<div class="like">
 
 						<% if (liked) { %>
-							<span class="button-like active"> <i class="fa fa-heart-o"></i> <i class="fa fa-heart"></i> <span>{{product.likes}}</span> </span>
+							<span class="button-like active"> <i class="fa fa-heart-o"></i> <i class="fa fa-heart"></i> <span><%= likes %></span> </span>
 						<% } else { %>
-							<span class="button-like"> <i class="fa fa-heart-o"></i> <i class="fa fa-heart"></i> <span>{{product.likes}}</span> </span>
+							<span class="button-like"> <i class="fa fa-heart-o"></i> <i class="fa fa-heart"></i> <span><%= likes %></span> </span>
 						<% } %>
 
 					</div>
@@ -239,6 +239,7 @@
 
 	<script src="/js/lib/product.js"></script>
 	<script src="/js/lib/products.js"></script>
+	<script src="/js/lib/category-menu.js"></script>
 
 	<script src="/js/market.js"></script>
 
