--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -218,6 +218,8 @@
     <script src="/js/lib/filters.js"></script>
     <script src="/js/lib/work.js"></script>
     <script src="/js/lib/works.js"></script>
+    <script src="/js/lib/category-menu.js"></script>
+    
     <script src="/js/discover-works.js"></script>
 
 {% endblock %}
