--- a/public/css/discover-artists.css
+++ b/public/css/discover-artists.css
@@ -112,12 +112,16 @@ html {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
   display: table-cell;
+  cursor: pointer;
 }
 .thick-menu__item:not(:first-child) {
   padding-left: 1rem;
 }
 .thick-menu__item:not(:last-child) {
   padding-right: 1rem;
+}
+.thick-menu__item.selected {
+  background: #f6f6f6;
 }
 .carousel-thick-menu {
   height: 2.5rem;
@@ -1213,4 +1217,15 @@ html {
   text-align: center;
   max-width: 1100px;
   margin: auto;
+}
+.empty-result {
+  max-width: 1100px;
+  margin: auto;
+  padding: 2rem 1rem;
+  text-align: center;
+}
+.empty-result a {
+  font-size: 1rem;
+  fon-weight: 600;
+  color: #333;
 }
