--- a/app/views/pages/products.html
+++ b/app/views/pages/products.html
@@ -13,7 +13,7 @@
 		$ SECTION TITLE
 	********************************************************************* -->
 	<section class="section-title">
-		<span class="section-title-text">Products</span>
+		<span class="section-title-text">Productos</span>
 	</section>
 	
 
