--- a/public/stylus/elements/menus.styl
+++ b/public/stylus/elements/menus.styl
@@ -62,6 +62,8 @@
 			padding-right 1rem
 		&.selected
 			background #f6f6f6
+			border-left 1px solid #eee
+			border-right 1px solid #eee
 			
 .carousel-thick-menu
 	height 2.5rem
