--- a/app/views/pages/users.html
+++ b/app/views/pages/users.html
@@ -171,7 +171,7 @@
                     <p class="high-text note">No se encontraron resultados,
                         <button>
                             <a href="/works/category/all/page-1/">
-                                <strong>Ver todas las obras</strong>
+                                <strong>Ver todos los artístas</strong>
                             </a>
                         </button>
                     </p>
