--- a/app/views/partials/category-menu.html
+++ b/app/views/partials/category-menu.html
@@ -18,7 +18,7 @@
 					{% endfor %}
 
 				{% endif %}
-				{% if path == 'index' || path == 'login' || path == 'single-product' %}
+				{% if path == 'index' || path == 'login' || path == 'single-product' || path == 'checkout' %}
 					<a href="#" class="thick-menu__item">Obras Originales</a>
 					<a href="#" class="thick-menu__item">Polos</a>
 					<a href="#" class="thick-menu__item">Tazas</a>
@@ -33,23 +33,3 @@
 			</div>
 		</div>
 	</section>
-
-
-<!-- 
-					<a href="#" class="thick-menu__item">Obras Originales</a>
-					<a href="#" class="thick-menu__item">Polos</a>
-					<a href="#" class="thick-menu__item">Tazas</a>
-					<a href="#" class="thick-menu__item">Iphone Cases</a>
-					<a href="#" class="thick-menu__item">Prints</a> -->
-
-					<!-- 	<a href="#" class="thick-menu__item">Arte Urbano</a>
-					<a href="#" class="thick-menu__item">Collage</a>
-					<a href="#" class="thick-menu__item">Dibujo</a>
-					<a href="#" class="thick-menu__item">Ilustracion</a>
-					<a href="#" class="thick-menu__item">Pintura</a>
-					<a href="#" class="thick-menu__item">Arte digital</a>
-					<a href="#" class="thick-menu__item">Fotografia</a>
-					<a href="#" class="thick-menu__item">Escultura</a>
-					<a href="#" class="thick-menu__item">Ilustracion</a>
-					<a href="#" class="thick-menu__item">Tecnica Mixta</a>
-					<a href="#" class="thick-menu__item">Grabado</a> -->
