--- a/public/stylus/elements/menus.styl
+++ b/public/stylus/elements/menus.styl
@@ -41,7 +41,7 @@
 	$ THICK-MENU
 *------------------------------------*/
 .thick-menu
-	// display flex
+	display block
 	font-weight 600
 	letter-spacing 2px
 	font-family 'Raleway'
