--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -501,6 +501,7 @@ html {
   border-bottom: 1px solid #eee;
 }
 .works {
+  min-height: 500px;
   padding: 0 0.5rem;
   overflow: hidden;
   max-width: 1100px;
@@ -718,6 +719,7 @@ html {
 }
 .artists {
   margin: 0.5rem;
+  min-height: 500px;
 }
 .artist-wrapper {
   padding: 0.5rem;
@@ -956,6 +958,7 @@ html {
   background-image: url("../img/works/obra12.jpg");
 }
 .products {
+  min-height: 500px;
   margin: 0.5rem;
 }
 .product-wrapper {
@@ -1256,6 +1259,19 @@ html {
 }
 .profile__city {
   padding-right: 1rem;
+}
+@media (min-width: 590px) {
+  .profile__avatar {
+    width: 7rem;
+  }
+  .profile__avatar img {
+    border: solid 5px #ccc;
+  }
+}
+@media (min-width: 720px) {
+  .profile__avatar {
+    width: 9rem;
+  }
 }
 /*------------------------------------*
 	$ PROFILE MENU
