--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -50,7 +50,7 @@
 					<div class="square-menu__item">Tienda</div>
 				</div>
 			{% else %}
-				<div class="square-menu__element">
+				<div class="square-menu__element" style="display: none;">
 					<div class="square-menu__item">Tienda</div>
 			{% endif %}
 				</div>
