--- a/public/stylus/objects/products.styl
+++ b/public/stylus/objects/products.styl
@@ -7,7 +7,7 @@
 	$ PRODUCTS
 *------------------------------------*/
 .products
-	// min-height 500px
+	min-height 500px
 	margin .5rem
 	// padding 0 .5em
 	// max-width max-width
