--- a/public/stylus/profile.styl
+++ b/public/stylus/profile.styl
@@ -50,6 +50,19 @@
 		padding-right 1rem
 
 
+@media (min-width: tablet)
+	.profile
+		&__avatar
+			width 7rem
+			img
+				border solid 5px #ccc
+
+@media (min-width: tablet-medium)
+	.profile
+		&__avatar
+			width 9rem
+			
+
 /*------------------------------------*
 	$ PROFILE MENU
 *------------------------------------*/
