--- a/public/stylus/objects/works.styl
+++ b/public/stylus/objects/works.styl
@@ -9,7 +9,7 @@ columns = 6
 work-width = 150px
 
 .works
-	min-height 500px
+	// min-height 500px
 	padding 0 .5rem
 	overflow hidden
 	max-width max-width
