--- a/public/stylus/objects/artists.styl
+++ b/public/stylus/objects/artists.styl
@@ -8,7 +8,7 @@
 *------------------------------------*/
 .artists
 	margin .5rem
-	min-height 500px
+	// min-height 500px
 
 .artist-wrapper
 	padding .5rem
