--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -76,7 +76,7 @@
                 <div class="filters__title">Orden</div>
                 <div class="filter js-order" data-value="popularity">Más popular</div>
                 <div class="filter js-order" data-value="views">Más visto</div>
-                <div class="filter js-order" data-value="newest">Más reciente</div>z
+                <div class="filter js-order" data-value="newest">Más reciente</div>
             </div>
             <div class="filters">
                 <div class="filters__title">Tiempo</div>
