--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -46,7 +46,7 @@
 					<div class="square-menu__item">Portafolio <!-- <span class="number">{{data[0].portfolio}}</span> --></div>
 				</div>
 
-			{% if user.username != "artjam" %}
+			{% if user.username == "artjam" %}
 				<div class="square-menu__element">
 					<div class="square-menu__item">Tienda</div>
 				</div>
