--- a/app/views/user/product/index.html
+++ b/app/views/user/product/index.html
@@ -48,7 +48,7 @@
 						{% endif %}
 						</span>
 
-						<span class="price">$ {{product.price}}</span>
+						<span class="price">S/. {{product.price}}</span>
 
 					</div>
 					<div class="actions__buy">
