--- a/app/views/index.html
+++ b/app/views/index.html
@@ -51,7 +51,7 @@
 		$ WORKS MENU
 	********************************************************************* -->
 	<section class="works-menu">
-		<p class="medium-text">Obras recomendadas</p>
+		<p class="medium-text">Productos recomendados</p>
 		<a class="button-link" href="/works/category/all/page-1">Todas <i class="fa fa-angle-right"></i></a>
 	</section>
 
